example/errors/interpret/expected_block.box
when true {
} alt

println("no block");
